--- a/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.yaml
+++ b/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.yaml
@@ -6,13 +6,6 @@ parameters:
     default: "KubernetesLinuxPool001"
     displayName: "Linux Pool Name"
 
-pool:
-  name: ${{ parameters.linuxPoolName }}
-  # demands:
-  #   - Agent.OS -equals Linux
-  #   - Agent.Name -equals $(Agent.Name)
-  #   - Agent.Version -equals $(Agent.Version)
-
 resources:
   repositories:
     - repository: templates
@@ -22,87 +15,112 @@ resources:
       ref: main
 
 stages:
-  - stage: Deploy1
-    displayName: Deploy in Parallel 1
-    dependsOn: []
+  - stage: DeployInParallel
+    displayName: "Deploy in Parallel"
+    pool:
+      name: ${{ parameters.linuxPoolName }}
+      # demands:
+      #   - Agent.OS -equals Linux
+      #   - Agent.Name -equals $(Agent.Name)
+      #   - Agent.Version -equals $(Agent.Version)
     jobs:
-      - deployment: agentSetup
-        environment: ADO_test_linux
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Branch Checkout
-                - checkout: self
-                  persistCredentials: true
+      - job: parallelTest1
+        displayName: "Parallel Test 1"
+        steps:
+          #Branch Checkout
+          - checkout: self
+            persistCredentials: true
 
-                # Hello World program
-                - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
+          # Hello World program
+          - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
 
-                # test docker
-                - task: CmdLine@2
-                  displayName: test docker
-                  inputs:
-                    script: |
-                      echo Write your commands here
+          # test docker
+          - task: CmdLine@2
+            displayName: test docker
+            inputs:
+              script: |
+                echo Write your commands here
 
-                      echo Hello world
+                echo Hello world
 
-                      docker -v
-  - stage: Deploy2
-    displayName: Deploy in Parallel 2
-    dependsOn: []
-    jobs:
-      - deployment: agentSetup
-        environment: ADO_test_linux
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Branch Checkout
-                - checkout: self
-                  persistCredentials: true
+                docker -v
+      - job: parallelTest2
+        displayName: "Parallel Test 2"
+        steps:
+          #Branch Checkout
+          - checkout: self
+            persistCredentials: true
 
-                # Hello World program
-                - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
+          # Hello World program
+          - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
 
-                # test docker
-                - task: CmdLine@2
-                  displayName: test docker
-                  inputs:
-                    script: |
-                      echo Write your commands here
+          # test docker
+          - task: CmdLine@2
+            displayName: test docker
+            inputs:
+              script: |
+                echo Write your commands here
 
-                      echo Hello world
+                echo Hello world
 
-                      docker -v
-  - stage: Deploy3
-    displayName: Deploy in Parallel 3
-    dependsOn: []
-    jobs:
-      - deployment: agentSetup
-        environment: ADO_test_linux
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Branch Checkout
-                - checkout: self
-                  persistCredentials: true
+                docker -v
+      - job: parallelTest3
+        displayName: "Parallel Test 3"
+        steps:
+          #Branch Checkout
+          - checkout: self
+            persistCredentials: true
 
-                # Hello World program
-                - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
+          # Hello World program
+          - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
 
-                # test docker
-                - task: CmdLine@2
-                  displayName: test docker
-                  inputs:
-                    script: |
-                      echo Write your commands here
+          # test docker
+          - task: CmdLine@2
+            displayName: test docker
+            inputs:
+              script: |
+                echo Write your commands here
 
-                      echo Hello world
+                echo Hello world
 
-                      docker -v
+                docker -v
+      - job: parallelTest4
+        displayName: "Parallel Test 4"
+        steps:
+          #Branch Checkout
+          - checkout: self
+            persistCredentials: true
+
+          # Hello World program
+          - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
+
+          # test docker
+          - task: CmdLine@2
+            displayName: test docker
+            inputs:
+              script: |
+                echo Write your commands here
+
+                echo Hello world
+
+                docker -v
+      - job: parallelTest5
+        displayName: "Parallel Test 5"
+        steps:
+          #Branch Checkout
+          - checkout: self
+            persistCredentials: true
+
+          # Hello World program
+          - template: .azuredevops/scripts/kubernetes/linux/hello-world.yaml@templates
+
+          # test docker
+          - task: CmdLine@2
+            displayName: test docker
+            inputs:
+              script: |
+                echo Write your commands here
+
+                echo Hello world
+
+                docker -v
