--- a/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
+++ b/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
@@ -6,75 +6,53 @@ parameters:
     default: "KubernetesWindowsPool001"
     displayName: "Windows Pool Name"
 
-pool:
-  name: ${{ parameters.windowsPoolName }}
-  # demands:
-  #   - Agent.OS -equals Windows
-  #   - Agent.Name -equals $(Agent.Name)
-  #   - Agent.Version -equals $(Agent.Version)
-
 stages:
-  - stage: Deploy1
-    displayName: Deploy in Parallel 1
-    dependsOn: []
+  - stage: DeployInParallel
+    displayName: "Deploy in Parallel"
+    pool:
+      name: ${{ parameters.windowsPoolName }}
+      # demands:
+      #   - Agent.OS -equals Windows
+      #   - Agent.Name -equals $(Agent.Name)
+      #   - Agent.Version -equals $(Agent.Version)
     jobs:
-      - deployment: agentSetup
-        environment: ADO_test_windows
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Hello World From CMDLINE
-                - template: ../scripts/kubernetes/windows/hello-world.yaml
+      - job: parallelTest1
+        displayName: "Parallel Test 1"
+        steps:
+          #Hello World From CMDLINE
+          - template: ../scripts/kubernetes/windows/hello-world.yaml
 
-                #Print Hostname from CMDLINE
-                - template: ../scripts/kubernetes/windows/windows-hostname.yaml
-  - stage: Deploy2
-    displayName: Deploy in Parallel 2
-    dependsOn: []
-    jobs:
-      - deployment: agentSetup
-        environment: ADO_test_windows
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Hello World From CMDLINE
-                - template: ../scripts/kubernetes/windows/hello-world.yaml
+          #Print Hostname from CMDLINE
+          - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+      - job: parallelTest2
+        displayName: "Parallel Test 2"
+        steps:
+          #Hello World From CMDLINE
+          - template: ../scripts/kubernetes/windows/hello-world.yaml
 
-                #Print Hostname from CMDLINE
-                - template: ../scripts/kubernetes/windows/windows-hostname.yaml
-  - stage: Deploy3
-    displayName: Deploy in Parallel 3
-    dependsOn: []
-    jobs:
-      - deployment: agentSetup
-        environment: ADO_test_windows
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Hello World From CMDLINE
-                - template: ../scripts/kubernetes/windows/hello-world.yaml
+          #Print Hostname from CMDLINE
+          - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+      - job: parallelTest3
+        displayName: "Parallel Test 3"
+        steps:
+          #Hello World From CMDLINE
+          - template: ../scripts/kubernetes/windows/hello-world.yaml
 
-                #Print Hostname from CMDLINE
-                - template: ../scripts/kubernetes/windows/windows-hostname.yaml
-  - stage: Deploy4
-    displayName: Deploy in Parallel 4
-    dependsOn: []
-    jobs:
-      - deployment: agentSetup
-        environment: ADO_test_windows
-        displayName: "Agent Setup"
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                #Hello World From CMDLINE
-                - template: ../scripts/kubernetes/windows/hello-world.yaml
+          #Print Hostname from CMDLINE
+          - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+      - job: parallelTest4
+        displayName: "Parallel Test 4"
+        steps:
+          #Hello World From CMDLINE
+          - template: ../scripts/kubernetes/windows/hello-world.yaml
 
-                #Print Hostname from CMDLINE
-                - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+          #Print Hostname from CMDLINE
+          - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+      - job: parallelTest5
+        displayName: "Parallel Test 5"
+        steps:
+          #Hello World From CMDLINE
+          - template: ../scripts/kubernetes/windows/hello-world.yaml
+
+          #Print Hostname from CMDLINE
+          - template: ../scripts/kubernetes/windows/windows-hostname.yaml
