--- a/.azuredevops/scripts/kubernetes/linux/hello-world.yaml
+++ b/.azuredevops/scripts/kubernetes/linux/hello-world.yaml
@@ -1,4 +1,7 @@
 steps:
     - bash: |
           echo "Hello, Welcome to DevOps ABCs World!"
+          # sleep for 2 minutes
+          echo "Sleeping for 2 minutes..."
+          sleep 120
       displayName: "Hello World"
