fixed duplicate name issue

--- a/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.template.yaml
+++ b/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.template.yaml
@@ -5,8 +5,8 @@ parameters:
     displayName: "Linux Pool Name"
 
 stages:
-  - stage: DeployInParallel
-    displayName: "Deploy in Parallel"
+  - stage: DeployInParallelLinux
+    displayName: "Deploy in Parallel Linux"
     pool:
       name: ${{ parameters.linuxPoolName }}
       # demands:
