--- a/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.template.yaml
+++ b/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.template.yaml
@@ -5,8 +5,8 @@ parameters:
     displayName: "Windows Pool Name"
 
 stages:
-  - stage: DeployInParallel
-    displayName: "Deploy in Parallel"
+  - stage: DeployInParallelWindows
+    displayName: "Deploy in Parallel Windows"
     pool:
       name: ${{ parameters.windowsPoolName }}
       # demands:
