refactored to call common template

--- a/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.yaml
+++ b/.azuredevops/pipelines/sample-run-on-linux-agent-k8s.yaml
@@ -15,112 +15,8 @@ parameters:
 #       ref: main
 
 stages:
-  - stage: DeployInParallel
-    displayName: "Deploy in Parallel"
-    pool:
-      name: ${{ parameters.linuxPoolName }}
-      # demands:
-      #   - Agent.OS -equals Linux
-      #   - Agent.Name -equals $(Agent.Name)
-      #   - Agent.Version -equals $(Agent.Version)
-    jobs:
-      - job: parallelTest1
-        displayName: "Parallel Test 1"
-        steps:
-          #Branch Checkout
-          - checkout: self
-            persistCredentials: true
-
-          # Hello World program
-          - template: ../scripts/kubernetes/linux/hello-world.yaml #@templates
-
-          # test docker
-          - task: CmdLine@2
-            displayName: test docker
-            inputs:
-              script: |
-                echo Write your commands here
-
-                echo Hello world
-
-                docker -v
-      - job: parallelTest2
-        displayName: "Parallel Test 2"
-        steps:
-          #Branch Checkout
-          - checkout: self
-            persistCredentials: true
-
-          # Hello World program
-          - template: ../scripts/kubernetes/linux/hello-world.yaml #@templates
-
-          # test docker
-          - task: CmdLine@2
-            displayName: test docker
-            inputs:
-              script: |
-                echo Write your commands here
-
-                echo Hello world
-
-                docker -v
-      - job: parallelTest3
-        displayName: "Parallel Test 3"
-        steps:
-          #Branch Checkout
-          - checkout: self
-            persistCredentials: true
-
-          # Hello World program
-          - template: ../scripts/kubernetes/linux/hello-world.yaml #@templates
-
-          # test docker
-          - task: CmdLine@2
-            displayName: test docker
-            inputs:
-              script: |
-                echo Write your commands here
-
-                echo Hello world
-
-                docker -v
-      - job: parallelTest4
-        displayName: "Parallel Test 4"
-        steps:
-          #Branch Checkout
-          - checkout: self
-            persistCredentials: true
-
-          # Hello World program
-          - template: ../scripts/kubernetes/linux/hello-world.yaml #@templates
-
-          # test docker
-          - task: CmdLine@2
-            displayName: test docker
-            inputs:
-              script: |
-                echo Write your commands here
-
-                echo Hello world
-
-                docker -v
-      - job: parallelTest5
-        displayName: "Parallel Test 5"
-        steps:
-          #Branch Checkout
-          - checkout: self
-            persistCredentials: true
-
-          # Hello World program
-          - template: ../scripts/kubernetes/linux/hello-world.yaml #@templates
-
-          # test docker
-          - task: CmdLine@2
-            displayName: test docker
-            inputs:
-              script: |
-                echo Write your commands here
-
-                echo Hello world
-
-                docker -v
+  - template: sample-run-on-linux-agent-k8s.template.yaml
+    parameters:
+      linuxPoolName: ${{ parameters.linuxPoolName }}
+      stageName: "DeployInParallelLinux"
+      stageDisplayName: "Deploy in Parallel Linux (${{ parameters.linuxPoolName }})"
