--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./dockerfiles/dind/v1/ --file dockerfiles/dind/v1/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build ./azsh-linux-agent --file ./azsh-linux-agent/Dockerfile.linux-sh-agent-docker --tag my-image-name:$(date +%s)
